--- a/app/views/discussions/_discussion_item.html.haml
+++ b/app/views/discussions/_discussion_item.html.haml
@@ -1,8 +1,16 @@
-.activity-item-body
+.activity-item-body.translate-parent
   %div{:class => "activity-icon " + item.icon }
   %span.activity-item-actor
     - unless item.actor.blank?
       =link_to item.actor.name, user_path(item.actor), class: "user-name"
   %span.activity-item-header= item.header
   %span.activity-item-content.word-break= item.body
-  .activity-item-time= t(:ago, :quantity_of_time => time_ago_in_words(item.time))
+  %span.activity-item-content.word-break.translated.translated-position
+    =t(:loading_translation)
+  .activity-item-time
+    = t(:ago, :quantity_of_time => time_ago_in_words(item.time))
+    - if item.item.is_a? DiscussionItems::NewVote
+      - vote = item.item.vote
+      - if vote.has_statement? && TranslationService.can_translate?(vote)
+        = " · "
+        = translate_link_for vote
