--- a/app/views/motions/_motion.html.haml
+++ b/app/views/motions/_motion.html.haml
@@ -1,4 +1,4 @@
-.motion
+.motion.translate-parent{id:"motion-#{motion.id}"}
   .row
     .span4.motion-header-info
       .clearfix
@@ -12,7 +12,6 @@
           %span= t(:proposal_closed_when, when: time_ago_in_words(motion.closed_at))
       .proposed-by
         = t(:proposed_when_by_who, when: time_ago_in_words(motion.created_at), who: motion.author_name)
-
     - if motion.voting?
       .span2.motion-admin-buttons
         - if can? :close, motion
@@ -35,12 +34,22 @@
     .row
       .span5
         =render "motions/outcome_statement", motion: motion
-
   .row
     .span5
       .description
         .long-description
           = render_rich_text(motion.description, false)
+        - if TranslationService.can_translate? motion
+          = translate_link_for motion
+
+  .row
+    .span4.motion-header-info
+      .clearfix
+        %h3.motion-title.word-break.translated-title.translated
+  .row
+    .span5
+      .description.translated-description.translated
+        = t(:loading_translation)
 
   .pie{id: "graph_#{motion.id}"}
 
